アイキャッチ追加。 透明度を掛け算にした。

--- a/main.css
+++ b/main.css
@@ -16,6 +16,10 @@ div {
   border: solid 2px black;
 }
 
+.eye-catch {
+  padding: 10px;
+  border: solid 1px Gray;
+}
 
 .src-image {
   border: none;
